<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.triviaapp.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/label_welcome"
        android:layout_gravity="center"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:padding="8dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="319dp"
        android:id="@+id/linear_trivia_image"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:padding="10dp"
            app:srcCompat="@drawable/trivia"
            android:layout_gravity="center"
            android:id="@+id/iv_trivia_image"

            />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <Button
            android:text="@string/btn_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_exit"
            android:layout_weight="0.70"
            style="@android:style/Widget.Button"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:text="@string/btn_start_trivia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start_trivia"
            android:layout_weight="0.66"
            style="@android:style/Widget.Button"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="10dp"/>

    </LinearLayout>


</LinearLayout>
